Рефакторинг кода, Доделать функционал Event