@@ -1,31 +1,22 @@
 package ru.practicum.service.event;
 
-import io.micrometer.common.lang.Nullable;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageRequest;
-import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import ru.practicum.client.StatsClient;
 import ru.practicum.dto.RequestStatsDto;
 import ru.practicum.dto.ResponseStatsDto;
-import ru.practicum.dto.event.AdminEventParam;
-import ru.practicum.dto.event.EventFullDto;
-import ru.practicum.dto.event.UpdateEventAdminRequest;
+import ru.practicum.dto.event.*;
 import ru.practicum.dto.request.ParticipationRequestDto;
 import ru.practicum.dto.request.RequestDtoMapper;
 import ru.practicum.exception.ConditionsNotMetException;
-import ru.practicum.dto.event.*;
-import ru.practicum.exception.EventConflictException;
 import ru.practicum.exception.NotFoundException;
 import ru.practicum.model.category.Category;
 import ru.practicum.model.event.Event;
 import ru.practicum.model.event.EventSort;
 import ru.practicum.model.event.State;
-import ru.practicum.model.event.mapper.EventFullDtoMapper;
 import ru.practicum.model.event.mapper.EventMapper;
 import ru.practicum.model.request.Request;
 import ru.practicum.model.request.RequestStatus;
@@ -38,146 +29,65 @@ import ru.practicum.util.OffsetBasedPageable;
 
 import java.time.Duration;
 import java.time.LocalDateTime;
-import java.util.Collections;
-import java.util.List;
-import java.util.Map;
 import java.util.*;
-import java.util.function.Function;
-import java.util.function.Supplier;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 @Service
 @Transactional(readOnly = true)
 @RequiredArgsConstructor
 public class EventServiceImpl implements EventService {
+    private static final long MIN_HOURS_BEFORE_PUBLICATION_FOR_ADMIN = 1;
+    private static final long MIN_HOURS_BEFORE_UPDATE_FOR_USER = 2;
+    private static final LocalDateTime START_DATE_FOR_STAT_REQUEST = LocalDateTime.now().minusYears(1);
+
     private final EventRepository eventRepository;
     private final RequestRepository requestRepository;
     private final UserRepository userRepository;
     private final CategoryRepository categoryRepository;
     private final StatsClient statsClient;
-    private static final long MIN_HOURS_BEFORE_PUBLICATION_FOR_ADMIN = 1;
     private final EventMapper eventMapper;
 
     @Override
     public List<EventFullDto> findAllAdmin(AdminEventParam params) {
         int from = params.from();
         int size = params.size();
+        Pageable pageable = new OffsetBasedPageable(from, size * 2);
 
-        Page<Event> eventsPage = eventRepository.findAll(EventRepository.Predicate.adminFilters(params), getPageRequest(from, size, null));
-        List<Event> events = eventsPage.getContent();
+        List<Event> events = eventRepository
+                .findAll(EventRepository.Predicate.adminFilters(params), pageable).getContent();
 
-        if (eventsPage.isEmpty()) {
-            return Collections.emptyList();
-        }
-
-        if (from > 0 && events.size() > from) {
-            events = events.subList(from, events.size());
-        }
-
-        if (events.size() > size) {
-            events = events.subList(0, size);
-        }
-
-        List<Long> eventIds = events.stream()
-                .map(Event::getId)
-                .toList();
-        Map<Long, Long> views = getViewsForEvents(eventIds);
-        Map<Long, Long> confirmedRequests = getConfirmedRequestsForEvents(eventIds);
+        setViewsAndConfirmedRequests(events);
 
         return events.stream()
-                .map(event -> EventFullDtoMapper.mapToEventFullDto(event, confirmedRequests.get(event.getId()), views.get(event.getId())))
+                .map(eventMapper::toFullDto)
+                .limit(size)
                 .toList();
     }
 
     @Override
     @Transactional
-    public EventFullDto updateAdminEvent(long id, UpdateEventAdminRequest event) {
-        Event eventModel = eventRepository.findById(id)
+    public EventFullDto updateAdminEvent(long id, UpdateEventAdminRequest updateRequest) {
+        LocalDateTime now = LocalDateTime.now();
+
+        Event event = eventRepository.findById(id)
                 .orElseThrow(() -> new NotFoundException("Событие с id " + id + " не найдена"));
 
-        if (event.annotation() != null) {
-            eventModel.setAnnotation(event.annotation());
-        }
+        updateEvent(event, updateRequest);
 
-        if (event.category() != null) {
-            Category category = categoryRepository.findById(event.category())
-                    .orElseThrow(() -> new NotFoundException("Category with id=" + event.category() + " not found for eventModel update."));
-            eventModel.setCategory(category);
-        }
-
-        if (event.description() != null) {
-            eventModel.setDescription(event.description());
-        }
-
-        if (event.eventDate() != null) {
-            eventModel.setEventDate(event.eventDate());
-        }
-
-        if (event.location() != null) {
-            eventModel.setLocation(event.location());
-        }
-
-        if (event.paid() != null) {
-            eventModel.setPaid(event.paid());
-        }
-
-        if (event.participantLimit() != null) {
-            eventModel.setParticipantLimit(event.participantLimit());
-        }
-
-        if (event.requestModeration() != null) {
-            eventModel.setRequestModeration(event.requestModeration());
-        }
-
-        if (event.title() != null) {
-            eventModel.setTitle(event.title());
-        }
-
-        if (event.stateAction() != null) {
-            switch (event.stateAction()) {
-                case PUBLISH_EVENT:
-                    if (eventModel.getState() != State.PENDING) {
-                        throw new ConditionsNotMetException("Событие можно публиковать, только если оно в состоянии ожидания публикации. Настоящее состояние: " + eventModel.getState());
-                    }
-                    if (eventModel.getEventDate().isBefore(LocalDateTime.now().plusHours(MIN_HOURS_BEFORE_PUBLICATION_FOR_ADMIN))) {
-                        throw new ConditionsNotMetException("Дата начала изменяемого события должна быть не ранее чем за час от даты публикации");
-                    }
-                    eventModel.setState(State.PUBLISHED);
-                    eventModel.setPublishedOn(LocalDateTime.now());
-                    break;
-                case REJECT_EVENT:
-                    if (eventModel.getState() == State.PUBLISHED) {
-                        throw new ConditionsNotMetException("Событие можно отклонить, только если оно еще не опубликовано");
-                    }
-                    eventModel.setState(State.CANCELED);
-                    break;
-                default:
-                    break;
-            }
-        }
-
-        Long views = getViews(eventModel.getId());
-        System.out.println(views);
-        Long confirmedRequests = getConfirmedRequests(eventModel.getId());
-        System.out.println(confirmedRequests);
-        return EventFullDtoMapper.mapToEventFullDto(eventRepository.save(eventModel), confirmedRequests, views);
+        setViewsAndConfirmedRequests(event);
+        return eventMapper.toFullDto(eventRepository.save(event));
     }
 
-    private Pageable getPageRequest(int from, int size, Sort sort) {
-        int pageSize = from + size;
-
-        if (sort == null) {
-            return PageRequest.of(0, pageSize);
-        }
-        return PageRequest.of(0, pageSize, sort);
-    }
-
-    //TODO
     @Override
     public List<EventShortDto> findPublicEvents(EventPublicParam params) {
-        Specification<Event> spec = buildSpecification(params);
-        List<Event> events = eventRepository.findAll(spec);
+        int from = params.from();
+        int size = params.size();
+        Sort defaultSort = Sort.by("eventDate");
+        Pageable pageable = new OffsetBasedPageable(from, size * 2, defaultSort);
+
+        List<Event> events = eventRepository
+                .findAll(EventRepository.Predicate.publicFilters(params), pageable)
+                .getContent();
 
         setViewsAndConfirmedRequests(events);
 
@@ -193,8 +103,7 @@ public class EventServiceImpl implements EventService {
         return events.stream()
                 .map(eventMapper::toShortDto)
                 .sorted(comparator)
-                .skip(params.from())
-                .limit(params.size())
+                .limit(size)
                 .collect(Collectors.toList());
     }
 
@@ -210,17 +119,21 @@ public class EventServiceImpl implements EventService {
 
     @Override
     public List<EventShortDto> findUserEvents(Long userId, EventPrivateParam params) {
+        int from = params.from();
+        int size = params.size();
+        Sort defaultSort = Sort.by("id").descending();
+
         if (!userRepository.existsById(userId)) {
             throw new NotFoundException(String.format("User with id %d not found", userId));
         }
-        Pageable pageable = new OffsetBasedPageable(params.from(), params.size(), Sort.by("id").descending());
+        Pageable pageable = new OffsetBasedPageable(from, size, defaultSort);
         List<Event> events = eventRepository.findAllByInitiator_Id(userId, pageable);
 
         setViewsAndConfirmedRequests(events);
 
         return events.stream()
                 .map(eventMapper::toShortDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional
@@ -249,7 +162,6 @@ public class EventServiceImpl implements EventService {
     @Transactional
     @Override
     public EventFullDto updateUserEvent(UpdateEventUserRequestParam requestParam) {
-        LocalDateTime now = LocalDateTime.now();
         Event event = eventRepository.findByIdAndInitiator_Id(requestParam.eventId(), requestParam.userId())
                 .orElseThrow(
                         () -> new NotFoundException(
@@ -259,16 +171,6 @@ public class EventServiceImpl implements EventService {
                                         requestParam.userId())));
 
         UpdateEventUserRequest updateRequest = requestParam.request();
-
-        if (event.getState().equals(State.PUBLISHED)) {
-            throw new EventConflictException("Ожидается статус PENDING или CANCELED, получен - " + event.getState());
-        }
-
-        if (now.plusHours(2).isAfter(event.getEventDate())) {
-            throw new EventConflictException("Изменить можно события запланированные " +
-                                             "на время не ранее чем через 2 часа от текущего, разница времени - " +
-                                             Duration.between(now, event.getEventDate()).toHours());
-        }
 
         updateEvent(event, updateRequest);
         eventRepository.save(event);
@@ -300,14 +202,14 @@ public class EventServiceImpl implements EventService {
 
         if (event.getParticipantLimit() != 0 &&
             event.getConfirmedRequests() >= event.getParticipantLimit()) {
-            throw new EventConflictException("Достигнут лимит по заявкам на событие - " + event.getId());
+            throw new ConditionsNotMetException("Достигнут лимит по заявкам на событие - " + event.getId());
         }
 
         List<Request> requestsToUpdate = requestRepository.findAllById(updateRequest.requestIds());
 
         requestsToUpdate.forEach(request -> {
             if (!request.getStatus().equals(RequestStatus.PENDING)) {
-                throw new EventConflictException(
+                throw new ConditionsNotMetException(
                         "Статус можно изменить только у заявок в состоянии ожидания. " +
                         "Текущий статус заявки " + request.getId() + ": " + request.getStatus());
             }
@@ -341,67 +243,6 @@ public class EventServiceImpl implements EventService {
                 RequestDtoMapper.mapRequestToDto(confirmedRequests),
                 RequestDtoMapper.mapRequestToDto(rejectedRequests)
         );
-    }
-
-    private Specification<Event> buildSpecification(EventPublicParam params) {
-        return Stream.<Supplier<Specification<Event>>>of(
-                        () -> (root, query, cb) ->
-                                cb.equal(root.get("state"), State.PUBLISHED),
-                        () -> createOptionalSpec(params.text(), this::createTextSpec),
-                        () -> createOptionalSpec(params.categories(), this::createCategoriesSpec),
-                        () -> createOptionalSpec(params.paid(), this::createPaidSpec),
-                        () -> createDateSpec(params.rangeStart(), params.rangeEnd())
-                )
-                .map(Supplier::get)
-                .reduce(Specification::and)
-                .orElse(Specification.unrestricted());
-    }
-
-    private <T> Specification<Event> createOptionalSpec(@Nullable T value,
-                                                        Function<T, Specification<Event>> specCreator) {
-        if (value != null && !isEmpty(value)) {
-            return specCreator.apply(value);
-        }
-        return Specification.unrestricted();
-    }
-
-    private boolean isEmpty(Object value) {
-        if (value instanceof Collection) return ((Collection<?>) value).isEmpty();
-        if (value instanceof String) return ((String) value).isBlank();
-        return false;
-    }
-
-    private Specification<Event> createTextSpec(String text) {
-        return (root, query, cb) -> {
-            String pattern = "%" + text.toLowerCase() + "%";
-            return cb.or(
-                    cb.like(cb.lower(root.get("annotation")), pattern),
-                    cb.like(cb.lower(root.get("description")), pattern)
-            );
-        };
-    }
-
-    private Specification<Event> createCategoriesSpec(Set<Long> categories) {
-        return (root, query, cb) ->
-                root.get("category").get("id").in(categories);
-    }
-
-    private Specification<Event> createPaidSpec(Boolean paid) {
-        return (root, query, cb) -> cb.equal(root.get("paid"), paid);
-    }
-
-    private Specification<Event> createDateSpec(LocalDateTime rangeStart, LocalDateTime rangeEnd) {
-        return (root, query, cb) -> {
-            if (rangeStart != null && rangeEnd != null) {
-                return cb.between(root.get("eventDate"), rangeStart, rangeEnd);
-            } else if (rangeStart != null) {
-                return cb.greaterThanOrEqualTo(root.get("eventDate"), rangeStart);
-            } else if (rangeEnd != null) {
-                return cb.lessThanOrEqualTo(root.get("eventDate"), rangeEnd);
-            } else {
-                return cb.greaterThan(root.get("eventDate"), LocalDateTime.now());
-            }
-        };
     }
 
     private Map<Long, Long> getViewsForEvents(List<Long> eventIds) {
@@ -461,7 +302,11 @@ public class EventServiceImpl implements EventService {
 
     private Map<Long, Long> getConfirmedRequestsForEvents(List<Long> eventIds) {
         try {
-            return requestRepository.countConfirmedRequestsByEventIds(eventIds);
+            return requestRepository.countConfirmedRequestsByEventIds(eventIds).stream()
+                    .collect(Collectors.toMap(
+                            tuple -> tuple.get(0, Long.class),
+                            tuple -> tuple.get(1, Long.class)
+                    ));
         } catch (Exception e) {
             return eventIds.stream().collect(Collectors.toMap(id -> id, id -> 0L));
         }
@@ -469,7 +314,7 @@ public class EventServiceImpl implements EventService {
 
     private RequestStatsDto createRequestStatsDto(List<String> uris, boolean unique) {
         return new RequestStatsDto(
-                LocalDateTime.now().minusYears(1),
+                START_DATE_FOR_STAT_REQUEST,
                 LocalDateTime.now(),
                 uris,
                 unique
@@ -508,6 +353,18 @@ public class EventServiceImpl implements EventService {
     }
 
     private void updateEvent(Event event, UpdateEventUserRequest updateRequest) {
+        LocalDateTime now = LocalDateTime.now();
+
+        if (!event.getState().equals(State.PENDING) && !event.getState().equals(State.CANCELED)) {
+            throw new ConditionsNotMetException("Ожидается статус PENDING или CANCELED, получен - " + event.getState());
+        }
+
+        if (now.plusHours(MIN_HOURS_BEFORE_UPDATE_FOR_USER).isAfter(event.getEventDate())) {
+            throw new ConditionsNotMetException("Изменить можно события запланированные " +
+                                                "на время не ранее чем через 2 часа от текущего, разница времени - " +
+                                                Duration.between(now, event.getEventDate()).toHours());
+        }
+
         Optional.ofNullable(updateRequest.annotation())
                 .filter(ann -> !ann.isBlank()).ifPresent(event::setAnnotation);
         Optional.ofNullable(updateRequest.description())
@@ -530,6 +387,50 @@ public class EventServiceImpl implements EventService {
             switch (updateRequest.stateAction()) {
                 case SEND_TO_REVIEW -> event.setState(State.PENDING);
                 case CANCEL_REVIEW -> event.setState(State.CANCELED);
+            }
+        }
+    }
+
+    private void updateEvent(Event event, UpdateEventAdminRequest updateRequest) {
+        LocalDateTime now = LocalDateTime.now();
+
+        if (event.getState() != State.PENDING) {
+            throw new ConditionsNotMetException(
+                    "Событие можно публиковать или отклонить, только если оно в состоянии ожидания публикации. Настоящее состояние: "
+                    + event.getState());
+        }
+
+        if (now.plusHours(MIN_HOURS_BEFORE_PUBLICATION_FOR_ADMIN).isAfter(event.getEventDate())) {
+            throw new ConditionsNotMetException(
+                    "Дата начала изменяемого события должна быть не ранее чем за час от даты публикации, разница времени - " +
+                    Duration.between(now, event.getEventDate()).toHours());
+        }
+
+        Optional.ofNullable(updateRequest.annotation())
+                .filter(ann -> !ann.isBlank()).ifPresent(event::setAnnotation);
+        Optional.ofNullable(updateRequest.description())
+                .filter(desc -> !desc.isBlank()).ifPresent(event::setDescription);
+        Optional.ofNullable(updateRequest.eventDate()).ifPresent(event::setEventDate);
+        Optional.ofNullable(updateRequest.location()).ifPresent(event::setLocation);
+        Optional.ofNullable(updateRequest.paid()).ifPresent(event::setPaid);
+        Optional.ofNullable(updateRequest.participantLimit()).ifPresent(event::setParticipantLimit);
+        Optional.ofNullable(updateRequest.requestModeration()).ifPresent(event::setRequestModeration);
+        Optional.ofNullable(updateRequest.title()).filter(title -> !title.isBlank()).ifPresent(event::setTitle);
+
+        Optional.ofNullable(updateRequest.category()).ifPresent(
+                categoryId -> event.setCategory(categoryRepository.findById(categoryId)
+                        .orElseThrow(
+                                () -> new NotFoundException("Category id " + categoryId + " not found")
+                        ))
+        );
+
+        if (updateRequest.stateAction() != null) {
+            switch (updateRequest.stateAction()) {
+                case PUBLISH_EVENT -> {
+                    event.setState(State.PUBLISHED);
+                    event.setPublishedOn(LocalDateTime.now());
+                }
+                case REJECT_EVENT -> event.setState(State.CANCELED);
             }
         }
     }
